--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,4 @@ before_install:
   - docker ps
 
 script:
-- bash build.sh
-
-deploy:
-  provider: script
-  script: bash deploy.sh
-  
+- bash GITVERSION=${GITVERSION} build.sh
