--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
----
-
 language: generic
 services:
-  - docker
-
+- docker
 before_install:
-  - docker ps
-
+- openssl aes-256-cbc -K $encrypted_8f097a5e32ec_key -iv $encrypted_8f097a5e32ec_iv
+  -in gpg.priv.enc -out gpg.priv -d
+- docker ps
 script:
 - bash build.sh
